# pico-midi-passthrough

./: .gitmodules  CMakeLists.txt  README.md
src/: pico-midi-passthrough.c  pico-midi-transformer.c  tusb_config.h  usb_descriptors.c
